<resources>
    <string name="app_name">tictactoe</string>
    <string name="btn_exit">QUIT</string>

    <string name="btn_start1">One Player Game</string>

    <string name="btn_start2">Two Players Game</string>

    <string name="btn_clear">CLEAR</string>

    <string name="win0">NOBODY WINS</string>

    <string name="win1_single">YOU LOST</string>

    <string name="win2_single">YOU WIN</string>

    <string name="win1_multiple">PLAYER 1 WINS</string>

    <string name="win2_multiple">PLAYER 2 WINS</string>

    <string name="btn_sound">SOUND</string>

    <string name="btn_mute">MUTE</string>

    <!-- AdMob Smart Banner ID -->


    <string name="adMob_smart">ca-app-pub-3310939034790481/3513231854</string>

    <!-- AdMob Interstitial ID -->


    <string name="adMob_interstitial">ca-app-pub-3310939034790481/3206249053</string>
</resources>