<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/root" xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/admob"/>


    <FrameLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/all">


    <FrameLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/game" android:background="#FFF">

    <FrameLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/frame" android:background="@drawable/frame" android:layout_gravity="center"/>

    <TextView android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/mess" android:background="#80000000" android:layout_gravity="center" android:visibility="gone" android:textStyle="bold" android:textSize="30sp" android:textColor="#FFF" android:lines="1" android:gravity="center"/>

</FrameLayout>


    <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/main" android:background="#FFF" android:padding="10dp">


    <LinearLayout android:orientation="horizontal" android:layout_height="160dp" android:layout_width="match_parent" >

    <ImageView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:src="@drawable/cross" android:contentDescription="@null"/>

    <TextView android:layout_height="match_parent" android:layout_width="0dp" android:id="@+id/txt_score" android:layout_gravity="center" android:textStyle="bold" android:textSize="40sp" android:textColor="#000000" android:gravity="center" android:layout_weight="1"/>

    <ImageView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:src="@drawable/next" android:contentDescription="@null"/>

</LinearLayout>


    <LinearLayout android:orientation="horizontal" android:layout_height="130dp" android:layout_width="match_parent" android:layout_marginTop="10dp">

    <Button android:layout_height="wrap_content" android:layout_weight="1" android:padding="8dp" android:textSize="8sp" android:layout_width="wrap_content" android:background="@drawable/button_unclick" android:id="@+id/btn_clear"  android:text="@string/btn_clear" android:onClick="onClick" android:layout_marginRight="5dp"  android:layout_marginTop="38dp"/>

    <Button android:layout_height="wrap_content"  android:layout_weight="1"  android:padding="8dp" android:textSize="8sp" android:layout_width="wrap_content" android:background="@drawable/button_unclick" android:id="@+id/btn_sound" android:text="@string/btn_mute" android:onClick="onClick"  android:layout_marginLeft="24dp" android:layout_marginTop="38dp"/>

</LinearLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"> <Button android:layout_height="wrap_content"  android:textSize="8sp"  android:padding="8dp" android:layout_width="wrap_content" android:layout_marginLeft="120dp" android:id="@+id/btn_start1" android:background="@drawable/button_unclick2"  android:layout_marginTop="10dp" android:text="@string/btn_start1" android:layout_centerHorizontal="true" android:onClick="onClick"/></RelativeLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"><Button android:layout_height="wrap_content"  android:textSize="8sp" android:padding="8dp" android:layout_width="wrap_content"  android:layout_marginLeft="120dp" android:id="@+id/btn_start2" android:background="@drawable/button_unclick2"  android:layout_marginTop="32dp" android:text="@string/btn_start2" android:onClick="onClick" android:layout_centerHorizontal="true"/></RelativeLayout>

        <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"> <Button android:layout_height="wrap_content"  android:textSize="8sp" android:layout_marginLeft="140dp" android:layout_width="wrap_content" android:id="@+id/btn_exit" android:background="@drawable/button_unclick"  android:layout_marginTop="48dp" android:text="@string/btn_exit" android:onClick="onClick" android:layout_centerHorizontal="true" android:padding="8dp"  /></RelativeLayout>

</LinearLayout>

</FrameLayout>

</LinearLayout>